# sgo

./: .env.example  .gitignore  AGENT.md  Dockerfile  LICENSE  README.md  SKILL.md  pyproject.toml  start.sh
docs/research/: cobra_social_bias_analysis.md  ctr_calibration.md
examples/: changes_codereview_ai.json  entity_codereview_ai.md  run_demo.sh
scripts/: bias_audit.py  build_category_map.py  compare.py  counterfactual.py  ctr_calibrate.py  evaluate.py  generate_cohort.py  persona_loader.py  setup_data.py  stratified_sampler.py
templates/: changes.json  entity_pitch.md  entity_product.md  entity_resume.md
web/: app.py
web/static/: index.html
