[project]
name = "semantic-gradient-optimization"
version = "0.1.0"
description = "Optimize entities against evaluator populations using LLMs and counterfactual probes"
requires-python = ">=3.11"
license = {text = "CC-BY-4.0"}

dependencies = [
    "datasets>=4.0.0",
    "huggingface_hub>=0.20.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
